--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "axios": "^0.26.1",
     "bootstrap": "^5.1.3",
     "react": "^18.0.0",
+    "react-bootstrap": "^2.2.3",
     "react-dom": "^18.0.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
+    "sass": "^1.50.0",
     "styled-components": "^5.3.5",
     "web-vitals": "^2.1.4"
   },
